--- a/src/dashboard.qmd
+++ b/src/dashboard.qmd
@@ -62,7 +62,7 @@ We have a separate tracking sheet that needs to be integrated into this workflow
 2. Number of papers by pub date.
 
 ```{r}
-#| title: "Papers by publication year"
+#| label: fig-papers-by-pub-year
 #| fig-cap: "Papers by publication year"
 papers_data |>
   ggplot() +
@@ -74,7 +74,7 @@ papers_data |>
 4. Who entered
 
 ```{r}
-#| title: "Papers entered by analyst"
+#| label: fig-papers-by-analyst
 #| fig-cap: "Papers entered by analyst"
 papers_data |>
   ggplot() +
@@ -87,7 +87,7 @@ papers_data |>
   - On PSU network
   
 ```{r}
-#| title: "Papers with openable URLs"
+#| label: fig-openable-papers
 #| fig-cap: "Papers with openable URLs"
 papers_data |>
   ggplot() +
