--- a/src/data.qmd
+++ b/src/data.qmd
@@ -1,7 +1,11 @@
 ---
-title: data
+title: Data
 bibliography: "include/bib/teller-acuity-cards.bib"
-draft: true
+format:
+  html:
+    code-fold: true
+    code-tools: true
+    toc: true
 params:
   data_dir: "data/csv"
   update_data: TRUE
