--- a/src/dashboard.qmd
+++ b/src/dashboard.qmd
@@ -7,7 +7,7 @@ format:
     toc: true
 params:
   data_dir: "data/csv"
-  update_data: FALSE
+  update_data: TRUE
   use_sysenv_creds: TRUE
   google_data_url: "https://docs.google.com/spreadsheets/d/1UFZkbh9oU4JHpYsrkDQcNmDyqD4J-qB74dhyMzIkqKs/edit?usp=sharing"
   sheet_name: "paper_data"
@@ -37,6 +37,8 @@ if (!dir.exists(params$data_dir)) {
   dir.create(params$data_dir)
 }
 
+project_ss <- params$google_data_url
+
 if (params$update_data) {
   if (params$use_sysenv_creds) {
     google_creds <- Sys.getenv("GMAIL_SURVEY")
@@ -49,7 +51,7 @@ if (params$update_data) {
     }
   }
 
-  papers_data <- googlesheets4::read_sheet(ss = params$google_data_url,
+  papers_data <- googlesheets4::read_sheet(ss = project_ss,
                             sheet = params$sheet_name)
   out_fn <- file.path(params$data_dir, params$data_fn)
   readr::write_csv(papers_data, out_fn)
@@ -61,20 +63,16 @@ if (params$update_data) {
 }
 ```
 
-::: {.callout-note}
-
-We have a separate tracking sheet that needs to be integrated into this workflow.
-
-:::
-
 ### Synched Paperpile file from GitHub
 
 We have configured Paperpile to synch a .bib formatted file directly with this repo on GitHub.
-The file can be found here: `src/data/paperpile.bib`.
+The files can be found here: `src/data/*paperpile*.bib`.
+
+We import `data/paperpile-tac-has-pdf.bib` and `data/paperpile-tac-no-pdf.bib` separately; add a variable indicating whether we have or do not have a PDF; then, join the two data data frames.
 
 ```{r}
-refs_w_pdf <- bib2df::bib2df("data/paperpile-tac-has-pdf.bib")
-refs_no_pdf <- bib2df::bib2df("data/paperpile-tac-no-pdf.bib")
+refs_w_pdf <- bib2df::bib2df("data/paperpile-tac-has-pdf.bib", separate_names = TRUE)
+refs_no_pdf <- bib2df::bib2df("data/paperpile-tac-no-pdf.bib", separate_names = TRUE)
 
 refs_w_pdf <- refs_w_pdf |>
   dplyr::mutate(pdf = TRUE)
@@ -87,21 +85,45 @@ refs <- dplyr::full_join(refs_w_pdf, refs_no_pdf)
 
 ## Clean
 
-The downloaded data are sufficiently clean as of 2024-03-28 for the following visualizations.
+The author and editor fields are imported as lists.
+We need to merge these into character strings to re-import the data back into Google Sheets.
+
+```{r}
+# Create function to change AUTHOR list to a string array
+make_author_list <- function(df) {
+  unlist(df$full_name) |> paste(collapse = "; ")
+}
+
+make_editor_list <- function(df) {
+  if (is.na(df$full_name)) {
+    ""
+  } else {
+  unlist(df$full_name) |> paste(collapse = "; ")    
+  }
+}
+
+authors_string <- purrr::map(refs$AUTHOR, make_author_list) |> 
+  purrr::list_c()
+
+editors_string <- purrr::map(refs$EDITOR, make_author_list) |> 
+  purrr::list_c()
+
+new_refs <- refs |>
+  dplyr::mutate(authors = authors_string,
+                editors = editors_string) |>
+  dplyr::select(-c("AUTHOR", "ANNOTE", "EDITOR"))
+```
+
+## Upload cleaned
+
+We the push the cleaned data back to Google Sheets for further analysis and processing
+
+```{r}
+new_refs |> 
+  googlesheets4::sheet_write(project_ss, "from_paperpile_via_github")
+```
 
 ## Visualize
-
-<!-- ### Papers by publication date (Google Scholar) -->
-
-<!-- ```{r} -->
-<!-- #| label: fig-papers-by-pub-year -->
-<!-- #| fig-cap: "Papers by publication year" -->
-<!-- papers_data |> -->
-<!--   ggplot() + -->
-<!--   aes(x = pub_year) + -->
-<!--   geom_bar() + -->
-<!--     theme(axis.text.x = element_text(angle = 90, vjust = 0.5, hjust=1)) -->
-<!-- ``` -->
 
 ### Papers by publication date
 
